--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,10 @@ __pycache__
 *.out
 *.err
 train.SBATCH
-/output/checkpoints
+# /output/checkpoints
 /output/previous_run
 *.zip
-/output/*.zip
+# /output/*.zip
 /output/*
 *.xml
 *.iml
